fixed alignment of body

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@
 
 .bodyBox {
   margin-left: 30%;
+  margin-right: 30%;
 }
 
 .title {
